# rsa-asst1

./: README.md  exampleCommands.py
beacon_locator/: CMakeLists.txt  INSTRUCTIONS.txt  package.xml
beacon_locator/launch/: beacon_locator.launch  simulator.launch
beacon_locator/launch/includes/: costmap2d.launch.xml  crosbot-fastslam.launch.xml  crosbot_explore.launch.xml  crosbot_move.launch.xml  gmapping.launch.xml  hector_trajectory_server.launch.xml  move_base.launch.xml
beacon_locator/param/: costmap2d_common_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
beacon_locator/scripts/: explorer.py  locator.py  maze_explorer.py
comp3431_starter/: .cproject  .project
turtlebot_navigation/: CMakeLists.txt  package.xml
turtlebot_navigation/launch/: explore.launch
turtlebot_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
turtlebot_navigation/scripts/: explorelogic.py
